@@ -10,6 +10,7 @@
   <%= hidden_field_tag :order %>
   <%= text_field_tag 'search', params[:search], class: 'search-query' %>
   <%= submit_tag 'Search', class: 'btn btn-primary' %>
+  <%= link_to 'Export', '#', class: 'btn', data: { object: 'export', format: 'csv', target: '#preceptors_search' } %>
 <% end %>
 
 <div id="preceptors"><center><%= image_tag "contour/ajax-loader.gif" %></center></div>
