@@ -2,6 +2,7 @@
 
 * Enhancements
   * Preceptor Other Support document now a file (docx, doc, pdf) upload
+  * Administrators can export selected preceptor information to a CSV file
 
 * Refactoring
   * Unused CV variable has been removed, (previously replaced by curriculum_vitae)
@@ -19,7 +20,7 @@
     * Notify applicants and trainees to fill out annual information
     * Modify submission date on applicant page
     * View different time ranges for reports on dashboard
-    * Export selected applicants information to a CSV file
+    * Export selected applicant information to a CSV file
     * Export annual information to CSV
     * Notify enrolled trainees to complete exit interviews
   * Preceptor updates
